--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ body{
   padding: 10px;
   background: #fff;
   border-radius: 4px;
+  display: flex;
+  flex-wrap: wrap;
 }
 #board li{
   background: #00aaff;
@@ -26,6 +28,12 @@ body{
   line-height: 40px;
   text-align: center;
   box-shadow: 0 4px 0 #0088cc;
+}
+#board li.pressed{
+  background: #ccc;
+  box-shadow: none;
+  margin-top: 9px;
+  margin-bottom: 1px;
 }
 #timer{
   margin-bottom: 8px;
